<resources>
    <string name="app_name">家装商城商户端</string>
    <string name="verName">v1.0.0</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="selectStoreType">选择商户类型</string>
    <string name="next">下一步</string>
    <string name="submit">提交</string>
    <string name="add">添加</string>
    <string name="phoneNum">手机号</string>
    <string name="password">密码</string>
    <string name="experience">立即体验</string>
    <string name="personal">个人商户</string>
    <string name="company">企业商户</string>
    <string name="phoneNumError">请验证手机号是否正确！</string>
    <string name="emailError">请验证邮箱格式是否正确！</string>
    <string name="birthdayError">请验证日期格式是否正确！</string>
    <string name="passwordError">密码不能为空！</string>
    <string name="notSelect">请选择要注册的商户类型！</string>
    <string name="inputTel">请输入您的手机号（必填）</string>
    <string name="getCaptcha">获取验证码</string>
    <string name="inputCaptcha">请输入验证码（必填）</string>
    <string name="inputCaptcha2">请输入验证码</string>
    <string name="inputSName">请输入商户名称（必填）</string>
    <string name="inputUserName">请输入商户负责人姓名（必填）</string>
    <string name="inputsLegal">请输入商户法人姓名（必填）</string>
    <string name="locationOfcity">商户所在城市（必填）</string>
    <string name="leaderSex">商户负责人性别（非必填）</string>
    <string name="leaderIdCard">请输入商户负责人身份证号（非必填）</string>
    <string name="legalIdCard">请输入商户法人身份证号（非必填）</string>
    <string name="leaderIdCardImg">商户负责人手持证件照（非必填）</string>
    <string name="legalIdCardImg">商户法人手持证件照（非必填）</string>
    <string name="businessLicenseImg">商户营业执照（非必填）</string>
    <string name="setPsw">设置密码（必填）</string>
    <string name="setPswAgain">再次输入密码（必填）</string>
    <string name="address">详细地址 街道/门牌号（必填）</string>
    <string name="captchaTip">验证码已发送，请注意查收!</string>
    <string name="portError">服务异常，请稍后重试！</string>
    <string name="selectCity">选择城市</string>
    <string name="openCity">已开通服务的城市：</string>
    <string name="cancle">取消</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="camera">拍照</string>
    <string name="album">相册</string>
    <string name="permissionError">我们需要的一些权限被您拒绝或者系统发生错误申请失败，请您到设置页面手动授权，否则部分功能可能无法正常使用！</string>
    <string name="captchaEmpty">验证码不能为空！</string>
    <string name="captchaError">验证码错误！</string>
    <string name="sNameEmpty">商户名称不能为空！</string>
    <string name="acIdEmpty">请选择商户所在城市！</string>
    <string name="sAddressEmpty">详细地址不能为空！</string>
    <string name="sLeaderEmpty">商户负责人姓名不能为空！</string>
    <string name="sLegalEmpty">商户法人姓名不能为空！</string>
    <string name="pswAgainEmpty">请再次输入密码！</string>
    <string name="pswError">两次输入的密码不一致！</string>
    <string name="registerSuccess">注册成功，请等待管理员审核！</string>
    <string name="loginSuccess">登录成功！</string>
    <string name="selectAuthenticationType">选择身份验证方式</string>
    <string name="phoneAuth">手机验证</string>
    <string name="safetyQuestionAuth">密保问题验证</string>
    <string name="authNotSelect">请选择身份验证方式！</string>
    <string name="forgetPsw">忘记密码？</string>
    <string name="forgetPsw2">忘记密码</string>
    <string name="retrievePsw">找回密码</string>
    <string name="haveNotSetSafetyQuestion">您还没有设置过密保问题哦！</string>
    <string name="authSuccess">身份验证成功！</string>
    <string name="authError">身份验证失败，请稍后重试！</string>
    <string name="yourAnswer">您的答案</string>
    <string name="question1">问题1：</string>
    <string name="question2">问题2：</string>
    <string name="question3">问题3：</string>
    <string name="yourAnswerEmpty">请填写您的答案！</string>
    <string name="captchaTip2">账号密码已发送，请注意查收!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_tab_index">首页</string>
    <string name="main_tab_msg">消息</string>
    <string name="main_tab_requirement">需求中心</string>
    <string name="main_tab_mine">我的</string>
    <string name="complete">已完成</string>
    <string name="unConfirm">待确认</string>
    <string name="doing">进行中</string>
    <string name="yestodayCompleteMoney">昨日成交额</string>
    <string name="todayCompleteMoney">今日成交额</string>
    <string name="totalCompleteMoney">总成交额</string>
    <string name="turnOverNo1">成交额贡献 NO1</string>
    <string name="requirementPriceNO1">需求单价 NO1</string>
    <string name="orderNumNO1">接单数量 NO1</string>
    <string name="product">商品</string>
    <string name="requirement">需求</string>
    <string name="utils">通用</string>
    <string name="todayProductOrderNum">今日订单数</string>
    <string name="productReundOrderNum">退款中</string>
    <string name="productUnpay">待付款</string>
    <string name="productUnDeliver">待发货</string>
    <string name="productComplete">已完成</string>
    <string name="yestodayProductOrderMoney">昨日成交金额</string>
    <string name="todayProductOrderMoney">今日成交金额</string>
    <string name="productOrderMoney">总成交金额</string>
    <string name="hotRequirement">· 热门需求 ·</string>
    <string name="noMoreHotRequirement">没有更多热门需求了···</string>
    <string name="requirementTitle">需求标题：</string>
    <string name="requirementContent">需求描述：</string>
    <string name="requirementCreateTime">发布时间：</string>
    <string name="requirementMoney">悬赏金额：</string>
    <string name="setting">设置</string>
    <string name="productOrderManager">商品订单</string>
    <string name="requirementOrderManager">需求订单</string>
    <string name="myWallet">我的钱包</string>
    <string name="myArrange">我的安排</string>
    <string name="myLevel">我的评级</string>
    <string name="accountInfo">账号信息</string>
    <string name="storeInfo">商户信息</string>
    <string name="changePsw">修改密码</string>
    <string name="safeCenter">安全中心</string>
    <string name="aboutUs">关于我们</string>
    <string name="quitAccount">退出账号</string>
    <string name="sLeader">商户负责人</string>
    <string name="sex">性别</string>
    <string name="email">邮箱</string>
    <string name="birthday">出生日期</string>
    <string name="tel">联系方式</string>
    <string name="unSetting">未设置</string>
    <string name="alreadySetting">已设置</string>
    <string name="updateSuccess">修改成功！</string>
    <string name="changeAccountInfo">修改商户信息</string>
    <string name="inputUNickName">请填写您的账户昵称</string>
    <string name="inputUEmail">请填写您的联系邮箱</string>
    <string name="inputUBirthday">请填写您的出生日期（例：2018-01-01）</string>
    <string name="inputUTel">请填写您的联系电话</string>
    <string name="inputSDescribe">请填写您的商户描述</string>
    <string name="singleInfoEmpty">请填写您要修改的商户信息！</string>
    <string name="changeNothing">没有修改任何内容哦！</string>
    <string name="storePics">商户宣传图片</string>
    <string name="noStorePics">商户宣传图片（未设置）</string>
    <string name="sName">商户名称</string>
    <string name="sDescribe">商户描述</string>
    <string name="sLegal">商户法人</string>
    <string name="sAddress">商户地址</string>
    <string name="sLevel">商户评级</string>
    <string name="inputCurrentPsw">请输入您当前的密码（必填）</string>
    <string name="inputNewPsw">请输入您要设置的密码（必填）</string>
    <string name="inputNewPswAgain">请确认您要设置的密码（必填）</string>
    <string name="currentPswEmpty">当前的密码不能为空！</string>
    <string name="newPswEmpty">设置的密码不能为空！</string>
    <string name="newPswAgainEmpty">再次确认的密码不能为空！</string>
    <string name="safetyQuestion">密保问题</string>
    <string name="settingSafetyQuestion">创建密保问题</string>
    <string name="changeSafetyQuestion">修改密保问题</string>
    <string name="tip">您可以创建三个密保问题，以便在进行敏感操作时保护您的账号安全。</string>
    <string name="tip2">您已设置过密保问题，是否进行修改？</string>
    <string name="settingSuccess">设置成功！</string>
    <string name="authOldQuestion">请先行验证当前密保问题：</string>
    <string name="newQuestion">新问题：</string>
    <string name="auth">提交</string>
    <string name="feedback">意见反馈</string>
    <string name="checkUpdate">检查更新</string>
    <string name="customerService">客服中心</string>
    <string name="funcErr">功能异常</string>
    <string name="productAdvice">产品建议</string>
    <string name="otherErr">其它问题</string>
    <string name="feedbackDetail">请补充详细意见</string>
    <string name="describeProblem">请描述您的问题···</string>
    <string name="submitSuccess">提交成功！</string>
    <string name="notNeedUpdate">已经是最新版本！</string>
    <string name="newVersion">有可用的新版本！</string>
    <string name="ignoreNewVersion">忽略此版本</string>
    <string name="updateNew">立即更新</string>
    <string name="downloading">下载中，请稍后···</string>
    <string name="quitApp">再按一次退出程序</string>
    <string name="serviceTel">客服热线：18348888899</string>
    <string name="serviceQQ">QQ：89158726</string>
    <string name="copyright">© 2018 石家庄爱团科技有限公司. ALL rights reserved</string>
    <string name="aMapLocationNotInit">请先行初始化高德地图定位服务！</string>
    <string name="inputMyArrange">请填写您的安排事项···</string>
    <string name="paySafeguards">缴纳保障金</string>
    <string name="thawSafeguards">申请解冻保障金</string>
    <string name="availableBalance">可用余额（元）</string>
    <string name="frozenSafeguards">冻结的保障金（元）</string>
    <string name="applyToBalance">申请提现金额（元）</string>
    <string name="applyToBalance2">申请提现</string>
    <string name="unFrozenSafeguards">申请解冻的保障金</string>
    <string name="unFrozenSafeguards2">解冻保障金</string>
    <string name="alreadyToBalance">已提现金额</string>
    <string name="presentRecord">提现记录</string>
    <string name="paySafeguards2">要缴纳的保障金金额（元）：</string>
    <string name="thawSafeguards2">要解冻的保障金金额（元）：</string>
    <string name="CNY">¥</string>
    <string name="payStyle">支付方式：</string>
    <string name="paySafeguardsEmpty">请输入要缴纳的保障金金额！</string>
    <string name="paySafeguardsErr">输入的金额格式错误！</string>
    <string name="payFailed">支付失败！</string>
    <string name="payCancle">取消支付！</string>
    <string name="paySuccess">支付成功！</string>
    <string name="payResult">支付结果</string>
    <string name="confirm">确认</string>
    <string name="newest">最新</string>
    <string name="hot">热门</string>
    <string name="price">价格</string>
    <string name="detail">详情</string>
    <string name="my_demand">我的需求</string>
    <string name="release">发布</string>
    <string name="pending_order">待接单</string>
    <string name="pending_sure">待确认</string>
    <string name="conducting">进行中</string>
    <string name="completed">已完成</string>
    <string name="revise">修改</string>
    <string name="delete">删除</string>
    <string name="demand_detail">需求详情</string>
    <string name="revise_demand">修改需求</string>
    <string name="apply_order">申请接单</string>
    <string name="notice_user_inspection_goods">通知用户验货</string>
    <string name="order_management">订单管理</string>
    <string name="order_detail">订单详情</string>
    <string name="all_evaluate">所有评论</string>
    <string name="pic">图片</string>
    <string name="apply_to_balance">提现</string>
    <string name="apply_to_balance2">提现金额（元）：</string>
    <string name="receivables_style">收款方式</string>
    <string name="card_num">卡号</string>
    <string name="apply_to_balance_et1">请输入您的收款账号</string>
    <string name="apply_to_balance_et2">请再次输入您的收款账号以确认</string>
    <string name="submit_apply">提交申请</string>
    <string name="my_shop">我的店铺</string>
    <string name="inputCompany">请输入快递公司（必填）</string>
    <string name="inputNum">请输入快递单号（必填）</string>
    <string name="delivery">发货</string>
    <string name="label_select_picture">选择图片来源</string>
    <string name="applyToBalanceMoneyEmpty">请输入要提现的金额！</string>
    <string name="thawSafeguardsEmpty">请输入要申请解冻的金额！</string>
    <string name="apply_to_balance_error">两次输入的收款账号不一致！</string>
    <string name="personal_data">个人资料</string>
    <string name="nim_status_bar_multi_messages_incoming">%1$d位联系人有新消息</string>
    <string name="nim_status_bar_ticker_text">%1$s有新消息</string>
    <string name="nim_status_bar_image_message">%1$s发来一条图片消息</string>
    <string name="nim_status_bar_audio_message">%1$s发来一条语音消息</string>
    <string name="nim_status_bar_video_message">%1$s发来一条视频消息</string>
    <string name="nim_status_bar_file_message">%1$s发来一条文件消息</string>
    <string name="nim_status_bar_location_message">%1$s分享了一个地理位置</string>
    <string name="nim_status_bar_notification_message">%1$s: 通知消息</string>
    <string name="nim_status_bar_custom_message">%1$s: 自定义消息</string>
    <string name="nim_status_bar_unsupported_message">%1$s: 无法显示该内容</string>
</resources>