<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@mipmap/zhezhao"
        android:elevation="5dp"
        android:padding="15dp"
        android:translationZ="10dp"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/action_bar_height">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:padding="15dp"
            android:src="@mipmap/back" />

        <TextView
            android:id="@+id/tv_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="15dp"
            android:text="@string/submit"
            android:textColor="@color/black"
            android:textSize="@dimen/function_btn" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/changePsw"
            android:textColor="@color/black"
            android:textSize="@dimen/title" />
    </RelativeLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="0.8dp"
        android:layout_below="@+id/rl_title"
        android:background="@color/grayline" />

    <EditText
        android:id="@+id/et_tel"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@+id/view"
        android:layout_margin="20dp"
        android:hint="@string/inputTel"
        android:inputType="phone"
        android:textColor="@color/black"
        android:textSize="@dimen/text"
        android:visibility="gone" />

    <EditText
        android:id="@+id/et_old_psw"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@+id/et_tel"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/inputCurrentPsw"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textSize="@dimen/text" />

    <EditText
        android:id="@+id/et_new_psw"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@+id/et_old_psw"
        android:layout_margin="20dp"
        android:hint="@string/inputNewPsw"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textSize="@dimen/text" />

    <EditText
        android:id="@+id/et_new_psw_again"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@+id/et_new_psw"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/inputNewPswAgain"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textSize="@dimen/text" />
</RelativeLayout>