<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/action_bar_height"
        android:background="@color/white">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:padding="15dp"
            android:src="@mipmap/back" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/feedback"
            android:textColor="@color/black"
            android:textSize="@dimen/title" />

        <TextView
            android:id="@+id/tv_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="15dp"
            android:text="@string/submit"
            android:textColor="@color/black"
            android:textSize="@dimen/function_btn" />
    </RelativeLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="0.8dp"
        android:layout_below="@+id/rl_title"
        android:background="@color/grayline" />

    <LinearLayout
        android:id="@+id/ll_feedback_type"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_below="@+id/view"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <Button
            android:id="@+id/btn_func_err"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:background="@drawable/shape_btn_blue"
            android:text="@string/funcErr"
            android:textColor="@color/white"
            android:textSize="@dimen/function_btn" />

        <Button
            android:id="@+id/btn_product_advice"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:background="@drawable/shape_btn_gray"
            android:text="@string/productAdvice"
            android:textColor="@color/black"
            android:textSize="@dimen/function_btn" />

        <Button
            android:id="@+id/btn_other_err"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:background="@drawable/shape_btn_gray"
            android:text="@string/otherErr"
            android:textColor="@color/black"
            android:textSize="@dimen/function_btn" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_feedback_type"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:drawableLeft="@mipmap/icon_yijian"
        android:drawablePadding="15dp"
        android:gravity="center_vertical"
        android:text="@string/feedbackDetail"
        android:textColor="@color/black"
        android:textSize="@dimen/function_btn" />

    <EditText
        android:id="@+id/et_feedback"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_below="@+id/tv"
        android:layout_margin="20dp"
        android:background="@drawable/shape_btn_gray"
        android:gravity="top|left"
        android:hint="@string/describeProblem"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textSize="@dimen/text" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@mipmap/zhezhao"
        android:padding="15dp"
        android:visibility="gone"
        android:translationZ="10dp"
        android:elevation="5dp"/>
</RelativeLayout>